@@ -361,7 +361,7 @@ class MapDataHandler:
 				general.log("[ map ] logout cancel")
 				self.pc.logout = False
 				self.send("0020", self.pc, "logoutcancel")
-			self.pc.set_motion(111, True)
+			self.pc.set_motion(111, True, False)
 			if not self.pc.pet:
 				return
 			with self.pc.pet.lock:
